# Exercises-Solutions

./: .gitignore  License  README.md  genErrCode.py
Exercises/: CMakeLists.txt  Makefile
Exercises/C_common/: device_info.c  err_code.c
Exercises/Cpp_common/: cl.hpp  device_picker.hpp  err_code.c  err_code.h  util.hpp  wtime.c
Exercises/Exercise01/: README.md
Exercises/Exercise01/C/: DeviceInfo.c  Makefile
Exercises/Exercise01/Cpp/: DeviceInfo.cpp  Makefile
Exercises/Exercise01/Julia/: device_info.jl
Exercises/Exercise01/Python/: DeviceInfo.py
Exercises/Exercise02/: README.md
Exercises/Exercise02/C/: Makefile  vadd_c.c
Exercises/Exercise03/: README.md
Exercises/Exercise03/Cpp/: Makefile  vadd.cpp
Exercises/Exercise03/Python/: deviceinfo.py  vadd.py
Exercises/Exercise04/: README.md
Exercises/Exercise04/C/: Makefile  vadd_c.c
Exercises/Exercise04/Cpp/: Makefile  vadd.cpp
Exercises/Exercise04/Julia/: deviceinfo.jl  vadd.jl
Exercises/Exercise05/: README.md
Exercises/Exercise05/C/: Makefile  vadd_c.c
Exercises/Exercise05/Cpp/: Makefile  vadd.cpp
Exercises/Exercise05/Julia/: vadd.jl
Exercises/Exercise05/Python/: vadd.py
Exercises/Exercise06/: README.md
Exercises/Exercise06/C/: Makefile  matmul.c  matmul.h  matrix_lib.h
Exercises/Exercise06/Cpp/: Makefile  matmul.cpp  matmul.hpp  matrix_lib.cpp  matrix_lib.hpp
Exercises/Exercise06/Julia/: matmul.jl
Exercises/Exercise06/Python/: helper.py  matmul.py
Exercises/Exercise07/: README.md
Exercises/Exercise08/: README.md
Exercises/Exercise08/C/: Makefile  pi.c
Exercises/Exercise08/Cpp/: Makefile
Exercises/Exercise08/Python/: pi.py
Exercises/Exercise09/: README.md
Exercises/Exercise09/C/: Makefile  pi.c
Exercises/Exercise09/Cpp/: Makefile  pi.cpp
Exercises/Exercise09/Julia/: pi.jl
Exercises/Exercise09/Python/: pi.py
Exercises/Exercise10/: README.md
Exercises/Exercise11/: README.md
Exercises/Exercise12/: README.md
Exercises/Exercise12/C/: Makefile  gameoflife.c
Exercises/Exercise12/C/Examples/Acorn/: input.params
Exercises/Exercise12/CUDA/: gameoflife.cu
Exercises/Exercise12/Displayer/: main.c
Exercises/Exercise12/Examples/Max/: input.params
Exercises/Exercise12/Examples/Pulsar/: input.params
Exercises/Exercise12/Examples/QueenBee/: input.params
Exercises/Exercise13/: README.md
Exercises/Exercise13/C/: Makefile  gameoflife.c
Exercises/Exercise13/CUDA/: Makefile  gameoflife.cu
Exercises/Exercise13/CUDA-VADD/: Makefile  vadd.cu
Exercises/Exercise13/Displayer/: Makefile  displayer.c
Exercises/Exercise13/Examples/Pulsar/: input.params
Exercises/ExerciseA/: README.md
Solutions/: Makefile
Solutions/C_common/: device_info.c  device_picker.h  err_code.c
Solutions/Cpp_common/: cl.hpp  device_picker.hpp  err_code.c
Solutions/Exercise01/: README.md
Solutions/Exercise04/: README.md
Solutions/Exercise05/: README.md
Solutions/Exercise06/: README.md
Solutions/Exercise07/: C_elem.cl  C_row.cl  C_row_priv.cl  README.md
Solutions/Exercise08/: C_block_form.cl  C_elem.cl  C_row.cl  C_row_priv_bloc.cl  README.md
Tools/: genErrCode.py  stringify_opencl
(+90 files in other folders)
